@@ -1,5 +1,11 @@
 2025-12-06  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* src/utils/xtotroff/xtotroff.c (MapFont, main): Tweak wording
+	of error diagnostics; favor "cannot" over "unable to" or
+	"can't".  Also quote name of environment variable.
+
+2025-12-06  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* src/utils/xtotroff/xtotroff.c: Fix code style nit.
 	(CanonicalizeFontName, FontNamesAmbiguous, MapFont, main):
 	Explicitly cast unused return values of printf(3)-family
